ASOC-68067 - Footer overlap issue when license banner is present (#3860)

--- a/investigate-shared/app/styles/investigate-shared/components/file-actionbar/_manifest.scss
+++ b/investigate-shared/app/styles/investigate-shared/components/file-actionbar/_manifest.scss
@@ -110,3 +110,11 @@
   display: inline-block;
   width: 90%;
 }
+
+.license-banner.show + .main-zone, .host-engine {
+  .rsa-data-filters {
+    .content-body {
+      height: calc(100vh - 296px);
+    }
+  }
+}
